# url-shortener-rs

./: .gitignore  Cargo.toml
src/: domain.rs  lib.rs  main.rs
src/domain/: mod.rs  post.rs
src/routes/: mod.rs  url.rs
src/routes/pages/: home.rs
src/storage/: cache.rs  database.rs
static/: index.html  not_found.html
