[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
nanoid = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
tokio = { version = "1.36.0", features = ["full"] }
